# portfolio

./: Engine.ipdb  Graphing.sln  README.md  Sim.py  main.cpp  main.exe.manifest  main.py
10) Perceus - 2019/: CMakeLists.txt  Compiling.txt  config  perceus.proj  readme.md
10) Perceus - 2019/doc/html/: Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8h.html  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  BufferArray_8cpp.html  BufferArray_8cpp__incl.map  BufferArray_8cpp__incl.md5  BufferArray_8h.html  BufferArray_8h__dep__incl.map  BufferArray_8h__dep__incl.md5  BufferArray_8h__incl.map  BufferArray_8h__incl.md5  BufferArray_8h_source.html  Buffer_8cpp.html  Buffer_8cpp__incl.map  Buffer_8cpp__incl.md5  Buffer_8h.html  Buffer_8h__dep__incl.map  Buffer_8h__dep__incl.md5  Buffer_8h__incl.map  Buffer_8h__incl.md5  Buffer_8h_source.html  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8h.html  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  Clock_8h.html  Clock_8h__dep__incl.map  Clock_8h__dep__incl.md5  Clock_8h__incl.map  (+768 more)
10) Perceus - 2019/doc/latex/: Application_8cpp.tex  Application_8cpp__incl.md5  Application_8h.tex  Application_8h__dep__incl.md5  Application_8h__incl.md5  BufferArray_8cpp.tex  BufferArray_8cpp__incl.md5  BufferArray_8h.tex  BufferArray_8h__dep__incl.md5  BufferArray_8h__incl.md5  (+339 more)
10) Perceus - 2019/lib/: perceus.lib
(+870 files in other folders)
